grammar.js
    source_file: ($) =>
      seq(optional($.shebang), repeat($._top_level_statement)),

    _top_level_statement: ($) =>
      choice(
        $.file_attribute_list,
        $.namespace_definition,
        $._non_namespace_top_level_statement,
      ),

    _statement: ($) =>
      choice(
        $.if_statement,
        $.while_statement,
        $.do_while_statement,
        $.for_statement,
        $.foreach_statement,
        $.using_statement,
        $.try_statement,
        $.final_local_declaration,
        $.expression_statement,
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    type_alias_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "type",
        field("name", $._local_identifier),
        optional($.type_parameter_list),
        "=",
        field("type", $._type),
        ";",
      ),

    newtype_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "newtype",
        field("name", $._local_identifier),
        optional($.type_parameter_list),
        "=",
        field("type", $._type),
        ";",
      ),

    function_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "function",
        field("name", $.function_name),
        optional($.type_parameter_list),
        field("parameters", $.parameter_list),
        optional($.return_type),
        optional($.where_clause),
        field("body", $.block),
      ),

    class_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        repeat(field("modifier", $.class_modifier)),
        "class",
        field("name", $._local_identifier),
        optional($.type_parameter_list),
        optional($.extends_clause),
        optional($.implements_clause),
        optional($.sealed_permissions),
        field("body", $.class_body),
      ),

    class_body: ($) => seq("{", repeat($._class_member), "}"),

    _class_member: ($) =>
      choice(
        $.enum_case_declaration,
        $.class_constant_declaration,
        $.method_declaration,
        $.property_declaration,
      ),

    method_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        repeat(field("modifier", $.member_modifier)),
        "function",
        field("name", $.member_name),
        optional($.type_parameter_list),
        field("parameters", $.parameter_list),
        optional($.return_type),
        optional($.where_clause),
        field("body", choice($.block, ";")),
      ),

    member_modifier: (_) =>
      choice(
        "public",
        "protected",
        "private",
        "static",
        "final",
        "abstract",
        "readonly",
      ),

    type_parameter_list: ($) =>
      seq("<", commaSep1($.type_parameter), optional(","), ">"),

    type_parameter: ($) =>
      seq(
        optional(field("variance", $.type_variance)),
        field("name", $._local_identifier),
        optional($.type_parameter_bound),
        optional($.type_parameter_default),
      ),

    type_parameter_bound: ($) =>
      seq(
        ":",
        field("type", $._type),
        repeat(seq("+", field("type", $._type))),
      ),
    type_parameter_default: ($) => seq("=", field("type", $._type)),

    parameter_list: ($) =>
      seq("(", optional(seq(commaSep1($.parameter), optional(","))), ")"),

    parameter: ($) =>
      seq(
        repeat($.attribute_group),
        repeat(field("modifier", $.member_modifier)),
        optional(field("type", $._type)),
        field("name", $.variable),
        optional($.parameter_default),
      ),

    return_type: ($) => seq(":", field("type", $._type)),

    expression_statement: ($) => seq($._expression, ";"),

    _expression: ($) => $._assignment_level,

    _assignment_level: ($) =>
      choice($.assignment_expression, $._conditional_level),

    conditional_expression: ($) =>
      prec.right(
        PREC.CONDITIONAL,
        seq(
          field("condition", $._coalesce_level),
          "?",
          field("then", $._assignment_level),
          ":",
          field("otherwise", $._assignment_level),
        ),
      ),

    _coalesce_level: ($) =>
      choice(
        alias($._coalesce_expression, $.binary_expression),
        $._logical_or_level,
      ),
    _type_operation_level: ($) =>
      choice($.type_operation_expression, $._pipe_level),

    _pipe_level: ($) =>
      choice(
        alias($._pipe_expression, $.binary_expression),
        $._concatenation_level,
      ),
    _unary_level: ($) =>
      choice(
        $.unary_expression,
        alias($._prefix_update_expression, $.update_expression),
        $._exponent_level,
      ),
    _postfix_level: ($) =>
      choice(
        $._primary_expression,
        alias($._postfix_update_expression, $.update_expression),
        $.function_call_expression,
        $.function_partial_application_expression,
        $.method_call_expression,
        $.method_partial_application_expression,
        $.null_safe_method_call_expression,
        $.static_method_call_expression,
        $.static_method_partial_application_expression,
        $.property_access_expression,
        $.null_safe_property_access_expression,
        $.static_property_access_expression,
        $.class_constant_access_expression,
        $.subscript_expression,
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    tuple_expression: ($) =>
      seq(
        "(",
        $._expression,
        ",",
        repeat(seq(choice($._expression, $.tuple_rest_element), ",")),
        optional(choice($._expression, $.tuple_rest_element)),
        ")",
      ),

    tuple_rest_element: ($) =>
      seq("...", optional(field("value", $._expression))),

    vector_expression: ($) =>
      seq(
        "vec",
        "[",
        optional(seq(commaSep1($.vector_element), optional(","))),
        "]",
      ),

    vector_element: ($) => seq(optional("..."), field("value", $._expression)),

    vector_fill_expression: ($) =>
      seq(
        "vec",
        "[",
        field("value", $._expression),
        ";",
        field("size", $._expression),
        "]",
      ),

    dictionary_expression: ($) =>
      seq(
        "dict",
        "[",
        optional(seq(commaSep1($.dictionary_entry), optional(","))),
        "]",
      ),

    dictionary_entry: ($) => choice($.dictionary_pair, $.dictionary_spread),
    dictionary_pair: ($) =>
      seq(field("key", $._expression), "=>", field("value", $._expression)),
    dictionary_spread: ($) => seq("...", field("value", $._expression)),

    closure_expression: ($) =>
      seq(
        repeat($.attribute_group),
        "fn",
        optional($.type_parameter_list),
        field("parameters", $.parameter_list),
        optional($.return_type),
        optional($.where_clause),
        field("body", $.closure_body),
      ),

    closure_body: ($) =>
      choice(seq("=>", field("value", $._expression)), $.block),

    object_creation_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          "new",
          field("class", $._class_reference),
          optional(field("arguments", $.argument_list)),
        ),
      ),

    _class_reference: ($) =>
      choice(
        seq(field("name", $._name), optional($.turbofish)),
        $.relative_scope,
        $.variable,
        $.parenthesized_expression,
      ),

    return_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq("return", optional(field("value", $._expression))),
      ),

    fresh_construct: (_) => construct("fresh"),
    assert_construct: ($) =>
      construct(
        "assert",
        seq(
          field("condition", $._expression),
          optional($.assert_message),
          optional(","),
        ),
      ),

    unary_expression: ($) =>
      seq(
        field("operator", choice("!", "~", "+", "-")),
        field("operand", $._unary_level),
      ),

    comparison_expression: ($) =>
      prec(
        PREC.COMPARISON,
        seq(
          field("left", $._type_operation_level),
          field("operator", $.comparison_operator),
          field("right", $._type_operation_level),
        ),
      ),

    comparison_operator: (_) => choice("==", "!=", "<", "<=", ">", ">=", "<=>"),

    type_operation_expression: ($) =>
      seq(
        field("value", $._pipe_level),
        field("operator", choice("is", "as", seq("?", "as"))),
        field("type", $._type),
      ),

    _assignment_target: ($) =>
      choice(
        $.variable,
        $.property_access_expression,
        $.static_property_access_expression,
        $.subscript_expression,
        $.append_expression,
        $.parenthesized_assignment_target,
        $.tuple_destructure,
        $.dictionary_destructure,
      ),

    assignment_expression: ($) =>
      prec.right(
        seq(
          field("left", $._assignment_target),
          field("operator", $.assignment_operator),
          field("right", $._assignment_level),
        ),
      ),

    assignment_operator: (_) =>
      choice(
        "=",
        "+=",
        "-=",
        "*=",
        "/=",
        "%=",
        "**=",
        ".=",
        "&=",
        "|=",
        "^=",
        "<<=",
        ">>=",
        "??=",
        "&&=",
        "||=",
      ),

    function_call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        choice(
          seq(
            field("function", $._postfix_level),
            optional($.turbofish),
            field("arguments", $.argument_list),
          ),
          seq(
            field("function", $._soft_function_name),
            field("arguments", $.argument_list),
          ),
        ),
      ),

    function_partial_application_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        choice(
          seq(
            field("function", $._postfix_level),
            optional($.turbofish),
            field("arguments", $.partial_argument_list),
          ),
          seq(
            field("function", $._soft_function_name),
            field("arguments", $.partial_argument_list),
          ),
        ),
      ),

    method_call_expression: ($) =>
      prec.left(
        PREC.POSTFIX + 1,
        seq(
          field("object", $._postfix_level),
          "->",
          field("method", $.member_name),
          optional($.turbofish),
          field("arguments", $.argument_list),
        ),
      ),

    method_partial_application_expression: ($) =>
      prec.left(
        PREC.POSTFIX + 1,
        seq(
          field("object", $._postfix_level),
          "->",
          field("method", $.member_name),
          optional($.turbofish),
          field("arguments", $.partial_argument_list),
        ),
      ),

    null_safe_method_call_expression: ($) =>
      prec.left(
        PREC.POSTFIX + 1,
        seq(
          field("object", $._postfix_level),
          "?->",
          field("method", $.member_name),
          optional($.turbofish),
          field("arguments", $.argument_list),
        ),
      ),

    argument_list: ($) =>
      seq("(", optional(seq(commaSep1($.argument), optional(","))), ")"),

    argument: ($) => choice($.named_argument, $.positional_argument),

    partial_argument_list: ($) =>
      seq(
        "(",
        choice(
          seq(
            repeat(seq($.argument, ",")),
            $._placeholder_argument,
            repeat(seq(",", choice($.argument, $._placeholder_argument))),
            optional(","),
          ),
          seq(
            repeat(seq(choice($.argument, $._placeholder_argument), ",")),
            $.variadic_placeholder_argument,
          ),
        ),
        ")",
      ),

    _placeholder_argument: ($) =>
      choice($.placeholder_argument, $.named_placeholder_argument),

    positional_argument: ($) => field("value", $._expression),
    named_argument: ($) =>
      seq(field("name", $.member_name), ":", field("value", $._expression)),
    placeholder_argument: (_) => "?",
    named_placeholder_argument: ($) =>
      seq(field("name", $.member_name), ":", "?"),
    variadic_placeholder_argument: (_) => "...",

    property_access_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("object", $._postfix_level),
          "->",
          field("property", $.member_name),
        ),
      ),

    null_safe_property_access_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("object", $._postfix_level),
          "?->",
          field("property", $.member_name),
        ),
      ),

    static_method_call_expression: ($) =>
      prec.left(
        PREC.POSTFIX + 1,
        seq(
          field("class", choice($._postfix_level, $.relative_scope)),
          optional(field("class_arguments", $.turbofish)),
          "::",
          field("method", $.member_name),
          optional(field("method_arguments", $.turbofish)),
          field("arguments", $.argument_list),
        ),
      ),

    static_method_partial_application_expression: ($) =>
      prec.left(
        PREC.POSTFIX + 1,
        seq(
          field("class", choice($._postfix_level, $.relative_scope)),
          optional(field("class_arguments", $.turbofish)),
          "::",
          field("method", $.member_name),
          optional(field("method_arguments", $.turbofish)),
          field("arguments", $.partial_argument_list),
        ),
      ),

    static_property_access_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("class", choice($._postfix_level, $.relative_scope)),
          optional(field("class_arguments", $.turbofish)),
          "::",
          field("property", $.variable),
        ),
      ),

    class_constant_access_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("class", choice($._postfix_level, $.relative_scope)),
          optional(field("class_arguments", $.turbofish)),
          "::",
          field("constant", $.member_name),
        ),
      ),

    relative_scope: (_) => choice("self", "parent", "static"),

    subscript_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("value", $._postfix_level),
          "[",
          field("index", $._expression),
          "]",
        ),
      ),

    append_expression: ($) =>
      prec.left(PREC.POSTFIX, seq(field("value", $._postfix_level), "[", "]")),

    boolean_literal: (_) => choice("true", "false"),
    null_literal: (_) => "null",

    integer_literal: (_) =>
      token(
        seq(
          choice(
            /0[xX][0-9A-Fa-f](?:_?[0-9A-Fa-f])*/,
            /0[bB][01](?:_?[01])*/,
            /0[oO][0-7](?:_?[0-7])*/,
            /0|[1-9](?:_?[0-9])*/,
          ),
          optional(/[iIuU]/),
        ),
      ),

    float_literal: ($) =>
      choice(
        $._float_literal_token,
        token(seq(".", DECIMAL_DIGITS, optional(EXPONENT))),
      ),

    string_literal: ($) =>
      choice($.single_quoted_string, $.double_quoted_string),

    single_quoted_string: ($) =>
      seq(
        "'",
        repeat(
          choice(
            alias($._single_quoted_string_content, $.string_content),
            $.single_quoted_escape_sequence,
          ),
        ),
        "'",
      ),

    _single_quoted_string_content: (_) => token.immediate(prec(1, /[^'\\]+/)),
    _constant_reference: ($) =>
      choice($.constant_name, $.qualified_name, $.fully_qualified_name),

    constant_access_expression: ($) => field("name", $._constant_reference),

    _type: ($) =>
      choice(
        $.union_type,
        $.intersection_type,
        $.negated_type,
        $._type_primary,
      ),

    union_type: ($) =>
      prec.left(
        PREC.TYPE_UNION,
        seq(field("left", $._type), "|", field("right", $._type)),
      ),

    named_type: ($) =>
      seq($._named_type_base, optional($.member_type)),

    type_argument: ($) => field("type", $._type),
